# music-emotion-classification-vst

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  test_clasifier.RPP
Controller-emoAsSMIs/: Controller-emoAsSMIs.jucer
Controller-emoAsSMIs/Source/: MainComponent.cpp  MainComponent.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  databaseComponent.h  emotional_db.h  initialComponent.cpp  initialComponent.h  led.h  levelMeter.h  saveComponent.h  wavPlayer.h
EmotionClassificationPlugin/: .clang-format  EmotionClassificationPlugin.jucer  MSD_musicnn.tflite  create_compile_scripts.sh  testproject.RPP
EmotionClassificationPlugin/Source/: AudioRecorder.h  AudioThumbnail.h  OSCreceiver.h  OSCsender.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  Poller.h  (+8 more)
OSCcontroller/: DUMMY_PLYGIN.pd  MAIN_laptop.pd  _abl_link_control.pd  _emotion_toggler.pd  _osc_conn.pd  _osc_conn2.pd  _osc_control.pd  _osc_receiver.pd  _osc_sender.pd  connection_handshake.pd  emoPlayback.pd  emotion_toggler.pd  localhost_plugdata_main.pd  main.pd  nameselector-help.pd  nameselector.pd  osc_box.pd  osc_connection.pd  osc_receiver.pd  osc_sender.pd  plugdata_main.pd
include/: extractionpipeline.h
juce-osc-controller/: oscController.jucer
libs/: compile_libraries.sh
src/: extractionpipeline.cpp  libmain.cpp  old_streaming_spectrogram.cpp
user_study/: README.md  player.pd
utils/: compile-essentia_amd64.py  compile-extractionpipeline_aarch64.sh  compile-extractionpipeline_amd64.sh  compile-streamingspectrogram.sh  compileRPI4.sh  egtdb_profile.yaml
(+68 files in other folders)
